# bcg-x-real-estate-assignment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: processed_real_estate_data.xlsx
data/raw/: real_estate_data.xlsx
models/: clustering_model.pkl  regression_model.ubj
notebooks/: exploratory_data_analysis_and_modeling.html  exploratory_data_analysis_and_modeling.ipynb
src/features/: build_features.py
