[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bcg-x-real-estate-assignment"
version = "0.0.1"
description = "A project that aims to retrieve insights from our real estate company data to maximize their revenue, decrease costs and understand their portfolio."
authors = [
  { name = "Taha Yassine BEN ALI" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["bcg-x-real-estate-assignment"]
force_sort_within_sections = true
